# icefield

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
src/: applier.rs  builder.rs  clean.rs  cleaner.rs  cli.rs  crypto.rs  fetch.rs  fingerprint.rs  info.rs  inspector.rs  logging.rs  lua.rs  lua_api.rs  lua_engine.rs  lua_registry.rs  main.rs  model.rs  paths.rs  state.rs  store.rs  switch.rs  switcher.rs  utils.rs
src/lua/: color.rs  drv.rs  engine.rs  fetch.rs  format.rs  fs.rs  lib.rs  log.rs  prelude.rs  registry.rs  render.rs  sys.rs
