[package]
name = "icefield"
version = "0.1.0"
edition = "2024"
description = "A declarative dotfile manager powered by Rust and Lua"
license = "MIT"
repository = "https://github.com/MOIS3Y/icefield"
readme = "README.md"
categories = ["command-line-utilities", "config"]
keywords = ["dotfiles", "declarative", "lua", "manager"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
directories = "6.0.0"
duct = "1.1.1"
flate2 = "1.1.9"
grass = "0.13.4"
indicatif = "0.18.4"
mlua = { version = "0.11.6", features = ["lua54", "serialize"] }
rust-ini = "0.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
shellexpand = "3.1.2"
tar = "0.4.46"
tempfile = "3.27.0"
tera = "1.20.1"
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "local-time", "time"] }
ureq = "3.3.0"
which = "8.0.2"
whoami = "2.1.2"
zip = "8.6.0"
